--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,6 @@
 *.PDF	 diff=astextplain
 *.rtf	 diff=astextplain
 *.RTF	 diff=astextplain
+
+misc export-ignore
+mergedevelopment.bat export-ignore
